--- a/public/css/stylesheets/screen.css
+++ b/public/css/stylesheets/screen.css
@@ -1,7 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 @import url("http://fonts.googleapis.com/css?family=Open+Sans");
 /* line 17, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
@@ -68,33 +64,70 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   display: block;
 }
 
-/* line 34, ../sass/screen.scss */
+/* line 1, ../sass/footer.scss */
+footer {
+  font-family: Helvetica, Arial, sans-serif;
+  padding: 0 5px;
+  font-size: 10pt;
+  color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  position: absolute;
+  text-align: center;
+  bottom: 1em;
+}
+/* line 11, ../sass/footer.scss */
+footer p {
+  padding: 0.25em;
+}
+/* line 13, ../sass/footer.scss */
+footer a {
+  color: inherit;
+}
+/* line 16, ../sass/footer.scss */
+footer a img.ilos {
+  height: 3em;
+  -webkit-filter: grayscale(1) contrast(0) brightness(0);
+  opacity: 0.5;
+  margin-bottom: 20px;
+}
+
+/* line 3, ../sass/signup-home.scss */
+section.signup-home .container {
+  position: relative;
+  margin: 50px auto;
+  background: rgba(254, 254, 254, 0.2);
+  width: 325px;
+  padding: 25px;
+  box-shadow: 0px 0px 150px rgba(0, 0, 0, 0.25), 0px 0px 2px rgba(255, 255, 255, 0.25) inset;
+}
+/* line 12, ../sass/signup-home.scss */
 section.signup-home header {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 36pt;
   display: block;
-  margin: 50px auto;
-  width: 300px;
+  margin: 35px auto;
+  width: 100%;
   font-weight: lighter;
-  color: #888;
+  color: rgba(0, 0, 0, 0.5);
   text-align: center;
+  text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.3);
 }
 
-/* line 46, ../sass/screen.scss */
+/* line 26, ../sass/signup-home.scss */
 form.form-signup-home {
   position: relative;
   margin: 0 auto;
-  width: 300px;
+  width: 100%;
   font-family: Helvetica, Arial, sans-serif;
+  color: rgba(0, 0, 0, 0.5);
 }
-/* line 52, ../sass/screen.scss */
+/* line 33, ../sass/signup-home.scss */
 form.form-signup-home p {
   margin: -10px 0 25px 0;
   padding: 0 5px;
   font-size: 10pt;
-  color: #888;
 }
-/* line 59, ../sass/screen.scss */
+/* line 39, ../sass/signup-home.scss */
 form.form-signup-home input {
   width: 100%;
   border-radius: 5px;
@@ -104,13 +137,31 @@ form.form-signup-home input {
   padding: 0.75em;
   font-size: 12pt;
   box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.5);
 }
-/* line 69, ../sass/screen.scss */
+/* line 51, ../sass/signup-home.scss */
 form.form-signup-home input[type='text'], form.form-signup-home input[type='password'] {
-  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5), 0px 0px 15px rgba(0, 0, 0, 0.05) inset;
+  box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5);
   margin-bottom: 15px;
 }
-/* line 74, ../sass/screen.scss */
+/* line 56, ../sass/signup-home.scss */
+form.form-signup-home input[type='text']::-webkit-input-placeholder, form.form-signup-home input[type='password']::-webkit-input-placeholder {
+  color: inherit;
+}
+/* line 57, ../sass/signup-home.scss */
+form.form-signup-home input[type='text']:-moz-placeholder, form.form-signup-home input[type='password']:-moz-placeholder {
+  color: inherit;
+}
+/* line 58, ../sass/signup-home.scss */
+form.form-signup-home input[type='text']::-moz-placeholder, form.form-signup-home input[type='password']::-moz-placeholder {
+  color: inherit;
+}
+/* line 59, ../sass/signup-home.scss */
+form.form-signup-home input[type='text']::-ms-input-placeholder, form.form-signup-home input[type='password']::-ms-input-placeholder {
+  color: inherit;
+}
+/* line 63, ../sass/signup-home.scss */
 form.form-signup-home input[type='submit'] {
   background: #60b044;
   background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #6dbc52), color-stop(100%, #509339));
@@ -120,34 +171,24 @@ form.form-signup-home input[type='submit'] {
   background: linear-gradient(#6dbc52, #509339);
   color: #fefefe;
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 1px 1px #bae0ad inset, 0px 0px 15px rgba(0, 0, 0, 0.05) inset, 0px 0px 5px rgba(0, 0, 0, 0.25);
-  border: 1px solid #60b044;
+  box-shadow: 0px 1px 1px #bae0ad inset, 0px 0px 15px rgba(0, 0, 0, 0.05) inset;
+  border: 1px solid #386628;
   cursor: pointer;
   font-weight: lighter;
 }
 
-/* line 89, ../sass/screen.scss */
-footer {
-  font-family: Helvetica, Arial, sans-serif;
-  padding: 0 5px;
-  font-size: 10pt;
-  color: #888;
-  height: 3em;
+/* line 17, ../sass/screen.scss */
+html {
+  background: -webkit-linear-gradient(-45deg, #84258a, #da1764);
+  background: -moz-linear-gradient(-45deg, #84258a, #da1764);
+  background: -o-linear-gradient(-45deg, #84258a, #da1764);
+  background: linear-gradient(-45deg, #84258a, #da1764);
+  height: 100%;
   width: 100%;
-  position: absolute;
-  text-align: center;
-  bottom: 1em;
-}
-/* line 100, ../sass/screen.scss */
-footer p {
-  padding: 0.25em;
-}
-/* line 104, ../sass/screen.scss */
-footer a {
-  color: #888;
+  overflow: hidden;
 }
 
-/* line 145, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 #code-edit .CodeMirror {
   box-shadow: none;
 }
