redesigning ide page

--- a/public/css/sass/colors.scss
+++ b/public/css/sass/colors.scss
@@ -1,11 +1,9 @@
 // theme colors!
 
 
-$solarized: #002b36;
+// monokai color scheme
 $monokai-bg: #272822;
 $monokai-red: #f9276b;
 $monokai-white: #f8f8f2;
-
-$red: #da1764;
-$purple: #84258a;
-$green: #60b044;
+$monokai-blue: #54ceef;
+$monokai-green: #a6e22d;
