--- a/public/css/sass/footer.scss
+++ b/public/css/sass/footer.scss
@@ -1,12 +1,21 @@
 footer {
-	font-family: Helvetica, Arial, sans-serif;
-	padding: 0 5px;
+	position: absolute;
+	top: 100%;
+	height: 200px;
+	background: darken($monokai-white, 10%);
+	font-family: "Ubuntu", Helvetica, Arial, sans-serif;
 	font-size: 10pt;
 	color: rgba(#000,0.5);
 	width: 100%;
-	position: absolute;
 	text-align: center;
-	bottom: 1em;
+	box-shadow: 0px 1px 0px darken($monokai-white, 15%) inset;
+
+	cite {
+		position: absolute;
+		width: 100%;
+		display: block;
+		bottom: 25px;
+	}
 
 	p { padding: 0.25em; }
 
@@ -14,6 +23,7 @@ footer {
 		color: inherit;
 		
 		img.ilos {
+			margin-top: 35px;
 			height: 3em;
 			-webkit-filter: grayscale(1) contrast(0) brightness(0);
 			opacity: 0.5;
