--- a/public/css/sass/navigation.scss
+++ b/public/css/sass/navigation.scss
@@ -1,38 +1,77 @@
+.left-nav-bar-wrap {
+	position: relative;
+	height: 100%;
+	width: 75px;
+	float: left;
+}
+
+.page-wrap {
+	position: relative;
+	float: left;
+	height: 100%;
+	width: calc(100% - 75px);
+	top: 0;
+}
+
 nav {
-	position: static;
-	padding: 25px;
+	position: relative;
 	width: 100%;
 	font-size: 25pt;
+	box-sizing: border-box;
+	z-index: 2;
 
+	&.left-nav-bar {
+		height: 100%;
+		background: $monokai-bg;
 
-
-	header {
-
-		h1 {
-			position: absolute;
-			left: 0;
-			font-family: "Open Sans", Helvetica, Arial, sans-serif;
-			font-size: 25pt;
-			display: block;
-			margin: 0 25px;
+		.icon-wrap {
+			padding: 0.5em;
 			width: 100%;
-			font-weight: lighter;
-			color: rgba(#000,0.5);
-			text-shadow: 0px 0px 5px rgba(#fff,0.3);
+			background: lighten( $monokai-bg, 10%);
+			box-sizing: border-box;
+			border-bottom: 1px solid lighten($monokai-bg,15%);
 		}
 
-		.header-actions {
+		ul {
+			li {
+				font-size: 20pt;
+				padding: 0.5em;
+				width: 100%;
+				box-sizing: border-box;
+				text-align: center;
+				color: $monokai-white;
+				border-bottom: 1px solid lighten($monokai-bg,15%);
+				transition: background 0.1s;
 
-			position: absolute;
-			right: 0;
-			width: 5em;
-
-			a.big-green-button {
-				font-size: 12pt;
-				border-radius: 5px;
-				text-decoration: none;
-				padding: 0.75em 1em;
+				&:hover { background: lighten($monokai-bg,5%); }
 			}
+		}
+	}
+
+	&.top-nav-bar {
+		width: 100%;
+		padding: 0.5em;
+		border-bottom: 1px solid darken($monokai-white,40%);
+		background: $monokai-white;
+	}
+
+	h1 {
+		font-family: "Ubuntu", Helvetica, Arial, sans-serif;
+		color: $monokai-bg;
+	}
+
+	.header-actions {
+
+		position: absolute;
+		top: 0.35em;
+		right: 25px;
+
+		a.big-green-button {
+			height: 25pt;
+			font-size: 12pt;
+			border-radius: 5px;
+			text-decoration: none;
+			padding: 0.5em 1em;
 		}
 	}
 }
