--- a/public/css/sass/signup-home.scss
+++ b/public/css/sass/signup-home.scss
@@ -1,12 +1,19 @@
 section.signup-home {
 
 	.container {
-		position: relative;
-		margin: 50px auto;
-		background: rgba(#fefefe,0.2);
 		width: 325px;
 		padding: 15px 25px 25px 25px;
-		box-shadow: 0px 0px 150px rgba(#000,0.25), 0px 0px 2px rgba(#fff,0.25) inset;
+
+		&::before {
+			position: absolute;
+			height: 10px;
+			width: 100%;
+			content: '';
+			top: 0;
+			left: 0;
+			background: rgba(#fff,0.5);
+			box-shadow: 0px 1px 5px -1px rgba(#000,0.5);
+		}
 	}
 
 	header {
