--- a/public/css/stylesheets/screen.css
+++ b/public/css/stylesheets/screen.css
@@ -159,7 +159,18 @@ section.signup-home .container {
   padding: 15px 25px 25px 25px;
   box-shadow: 0px 0px 150px rgba(0, 0, 0, 0.25), 0px 0px 2px rgba(255, 255, 255, 0.25) inset;
 }
-/* line 12, ../sass/signup-home.scss */
+/* line 11, ../sass/signup-home.scss */
+section.signup-home .container::before {
+  position: absolute;
+  height: 10px;
+  width: 100%;
+  content: '';
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.5);
+}
+/* line 23, ../sass/signup-home.scss */
 section.signup-home header {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 36pt;
@@ -172,7 +183,7 @@ section.signup-home header {
   text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.3);
 }
 
-/* line 26, ../sass/signup-home.scss */
+/* line 37, ../sass/signup-home.scss */
 form.form-signup-home {
   position: relative;
   margin: 0 auto;
@@ -180,13 +191,13 @@ form.form-signup-home {
   font-family: Helvetica, Arial, sans-serif;
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 33, ../sass/signup-home.scss */
+/* line 44, ../sass/signup-home.scss */
 form.form-signup-home p {
   margin: -10px 0 0 0;
   padding: 0 5px;
   font-size: 10pt;
 }
-/* line 39, ../sass/signup-home.scss */
+/* line 50, ../sass/signup-home.scss */
 form.form-signup-home input {
   width: 100%;
   border-radius: 5px;
@@ -199,28 +210,28 @@ form.form-signup-home input {
   background: rgba(0, 0, 0, 0.2);
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 51, ../sass/signup-home.scss */
+/* line 62, ../sass/signup-home.scss */
 form.form-signup-home input[type='text'], form.form-signup-home input[type='password'] {
   box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5);
   margin-bottom: 15px;
 }
-/* line 56, ../sass/signup-home.scss */
+/* line 67, ../sass/signup-home.scss */
 form.form-signup-home input[type='text']::-webkit-input-placeholder, form.form-signup-home input[type='password']::-webkit-input-placeholder {
   color: inherit;
 }
-/* line 57, ../sass/signup-home.scss */
+/* line 68, ../sass/signup-home.scss */
 form.form-signup-home input[type='text']:-moz-placeholder, form.form-signup-home input[type='password']:-moz-placeholder {
   color: inherit;
 }
-/* line 58, ../sass/signup-home.scss */
+/* line 69, ../sass/signup-home.scss */
 form.form-signup-home input[type='text']::-moz-placeholder, form.form-signup-home input[type='password']::-moz-placeholder {
   color: inherit;
 }
-/* line 59, ../sass/signup-home.scss */
+/* line 70, ../sass/signup-home.scss */
 form.form-signup-home input[type='text']::-ms-input-placeholder, form.form-signup-home input[type='password']::-ms-input-placeholder {
   color: inherit;
 }
-/* line 63, ../sass/signup-home.scss */
+/* line 74, ../sass/signup-home.scss */
 form.form-signup-home input[type='submit'] {
   margin-top: 25px;
 }
