--- a/public/css/stylesheets/signup-home.css
+++ b/public/css/stylesheets/signup-home.css
@@ -1,13 +1,20 @@
 /* line 3, ../sass/signup-home.scss */
 section.signup-home .container {
-  position: relative;
-  margin: 50px auto;
-  background: rgba(254, 254, 254, 0.2);
   width: 325px;
   padding: 15px 25px 25px 25px;
-  box-shadow: 0px 0px 150px rgba(0, 0, 0, 0.25), 0px 0px 2px rgba(255, 255, 255, 0.25) inset;
 }
-/* line 12, ../sass/signup-home.scss */
+/* line 7, ../sass/signup-home.scss */
+section.signup-home .container::before {
+  position: absolute;
+  height: 10px;
+  width: 100%;
+  content: '';
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 1px 5px -1px rgba(0, 0, 0, 0.5);
+}
+/* line 19, ../sass/signup-home.scss */
 section.signup-home header {
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 36pt;
@@ -20,7 +27,7 @@ section.signup-home header {
   text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.3);
 }
 
-/* line 26, ../sass/signup-home.scss */
+/* line 33, ../sass/signup-home.scss */
 form.form-signup-home {
   position: relative;
   margin: 0 auto;
@@ -28,13 +35,13 @@ form.form-signup-home {
   font-family: Helvetica, Arial, sans-serif;
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 33, ../sass/signup-home.scss */
+/* line 40, ../sass/signup-home.scss */
 form.form-signup-home p {
   margin: -10px 0 0 0;
   padding: 0 5px;
   font-size: 10pt;
 }
-/* line 39, ../sass/signup-home.scss */
+/* line 46, ../sass/signup-home.scss */
 form.form-signup-home input {
   width: 100%;
   border-radius: 5px;
@@ -47,28 +54,28 @@ form.form-signup-home input {
   background: rgba(0, 0, 0, 0.2);
   color: rgba(0, 0, 0, 0.5);
 }
-/* line 51, ../sass/signup-home.scss */
+/* line 58, ../sass/signup-home.scss */
 form.form-signup-home input[type='text'], form.form-signup-home input[type='password'] {
   box-shadow: 0px 0px 2px rgba(255, 255, 255, 0.5);
   margin-bottom: 15px;
 }
-/* line 56, ../sass/signup-home.scss */
+/* line 63, ../sass/signup-home.scss */
 form.form-signup-home input[type='text']::-webkit-input-placeholder, form.form-signup-home input[type='password']::-webkit-input-placeholder {
   color: inherit;
 }
-/* line 57, ../sass/signup-home.scss */
+/* line 64, ../sass/signup-home.scss */
 form.form-signup-home input[type='text']:-moz-placeholder, form.form-signup-home input[type='password']:-moz-placeholder {
   color: inherit;
 }
-/* line 58, ../sass/signup-home.scss */
+/* line 65, ../sass/signup-home.scss */
 form.form-signup-home input[type='text']::-moz-placeholder, form.form-signup-home input[type='password']::-moz-placeholder {
   color: inherit;
 }
-/* line 59, ../sass/signup-home.scss */
+/* line 66, ../sass/signup-home.scss */
 form.form-signup-home input[type='text']::-ms-input-placeholder, form.form-signup-home input[type='password']::-ms-input-placeholder {
   color: inherit;
 }
-/* line 63, ../sass/signup-home.scss */
+/* line 70, ../sass/signup-home.scss */
 form.form-signup-home input[type='submit'] {
   margin-top: 25px;
 }
